[gd_scene load_steps=11 format=3 uid="uid://btby7vyslwamg"]

[ext_resource type="Script" path="res://line_manager.gd" id="1_n038c"]
[ext_resource type="PackedScene" uid="uid://cydb6j4yh5jv7" path="res://Line.tscn" id="2_0viv0"]
[ext_resource type="Script" path="res://slider.gd" id="3_2tuu5"]
[ext_resource type="PackedScene" uid="uid://qn1g1b7yxqv" path="res://EventIndicator.tscn" id="3_i8py0"]
[ext_resource type="PackedScene" uid="uid://r50baf7tdvp2" path="res://SegmentIndicator.tscn" id="4_ft8bq"]
[ext_resource type="Texture2D" uid="uid://c252k160vuq3o" path="res://Dash.png" id="4_fv64i"]
[ext_resource type="Script" path="res://BenOtt.cs" id="5_5kxk0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28hfi"]
bg_color = Color(0.753027, 0.526072, 0.592863, 1)

[sub_resource type="Theme" id="Theme_u1yys"]
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_28hfi")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ohn2h"]

[node name="Line manager" type="Node"]
script = ExtResource("1_n038c")
line_scene = ExtResource("2_0viv0")
event_indicator_scene = ExtResource("3_i8py0")
segment_indicator_scene = ExtResource("4_ft8bq")

[node name="Add line" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -67.0
offset_top = -69.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_u1yys")
theme_override_font_sizes/font_size = 35
text = "+"

[node name="Slider" type="Node" parent="."]
script = ExtResource("3_2tuu5")

[node name="Line2D" type="Line2D" parent="Slider"]
z_index = 6
texture_filter = 1
texture_repeat = 2
points = PackedVector2Array(64, -12, 64, 595)
width = 5.0
default_color = Color(1, 1, 1, 0.337255)
texture = ExtResource("4_fv64i")
texture_mode = 1

[node name="HSlider" type="HSlider" parent="Slider"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -43.0
offset_right = -77.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/slider = SubResource("StyleBoxEmpty_ohn2h")
max_value = 1.0
step = 0.0
value = 0.085

[node name="BenOtt" type="Node" parent="."]
script = ExtResource("5_5kxk0")

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="pressed" from="Add line" to="." method="add_random_line"]
